# infumap

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  OPERATIONS.md  README.md  audit-npm.sh  audit-python.sh  audit-rust.sh  audit.sh  build-all.sh  build-musl.sh  build.sh  check-crate-ages.py  deny.toml  rustfmt.toml
chrome/: background.js  manifest.json  options.html  options.js
docs/: cli.md  configuration.md  data.md  developer.md  integrations.md  operations.md  readme.md  roadmap.md  security.md  todo.md
docs/deployment/: raspberry-pi-public-internet.md  raspberry-pi-vpn-only.md  raspberry-pi.md  secure.md  simple.md
infumap/: Cargo.toml  build-musl.sh  build.sh  default_settings.toml
infumap/rust-musl-builder/: CHANGELOG.md  Dockerfile  README.md
infumap/src/: config.rs  main.rs  rag.rs  setup.rs  tokiort.rs
infumap/src/ai/: artifact_paths.rs  batch_processing.rs  document_pipeline.rs  extraction.rs  fragment_indexing.rs  fragmenting.rs  fragments.rs  geo.rs  gpu_tools.rs  image_pipeline.rs  image_tagging.rs  indexing.rs  lexical_index.rs  metrics.rs  mod.rs  rag.rs  search_status.rs  text_embedding.rs  text_extraction.rs  title_indexing.rs  upload_quiet_period.rs
infumap/src/ai/fragment/: artifacts.rs  mod.rs  types.rs
infumap/src/ai/fragment/sources/: image.rs  markdown.rs  mod.rs  title.rs
infumap/src/ai/fragment/sources/pdf/: blocks.rs  chunking.rs  mod.rs  rendering.rs
infumap/src/ai/fragmenting/: content.rs  context.rs  image.rs  mod.rs  pdf.rs
infumap/src/ai/fragmenting/pdf/: blocks.rs  chunking.rs  loader.rs  mod.rs
infumap/src/ai/fragments/: artifacts.rs  mod.rs  types.rs
infumap/src/ai/fragments/sources/: content.rs  image.rs  mod.rs
infumap/src/ai/fragments/sources/pdf/: pages.rs  rendering.rs  splitting.rs  types.rs
infumap/src/ai/image_tagging/: artifacts.rs  mod.rs
infumap/src/ai/text_extraction/: artifacts.rs  mod.rs
infumap/src/ai/vector_db/: mod.rs  sqlite_vec.rs
infumap/src/cli/: compact.rs  embed.rs  emergency.rs  extract.rs  fragment.rs  fragments.rs  geo.rs  keygen.rs  login.rs  logout.rs  ls.rs  migrate.rs  mod.rs  note.rs  pending.rs  reconcile.rs  repair.rs  restore.rs  stats.rs  tag_images.rs  text_extraction.rs  upload.rs
infumap/src/cli/migrate/: mod.rs
infumap/src/cli/repair/: mod.rs
infumap/src/cli/restore/: mod.rs
infumap/src/cli/upload/: mod.rs
infumap/src/cli/validate/: mod.rs
infumap/src/storage/: mod.rs
infumap/src/storage/backup/: mod.rs
infumap/src/storage/cache/: favicon.rs  mod.rs
infumap/src/storage/db/: container_sync.rs  ingest_session.rs  ingest_session_db.rs  item.rs  item_db.rs  kv_store.rs  mod.rs  pending_user_db.rs  session.rs  session_db.rs  session_in_memory_db.rs  user.rs  user_db.rs  users_extra.rs  users_extra_db.rs
infumap/src/storage/file/: mod.rs
infumap/src/storage/image_cache/: mod.rs
infumap/src/storage/object/: mod.rs
infumap/src/storage/s3/: mod.rs
infumap/src/util/: crypto.rs  fs.rs  geometry.rs  image.rs  infu.rs  item.rs  json.rs  lang.rs  mime.rs  mod.rs  ordering.rs  retry.rs  str.rs  uid.rs
infumap/src/web/: cookie.rs  image_tagging.rs  mod.rs  prometheus.rs  responders.rs  rocket_config.rs  serve.rs  session.rs  text_extraction.rs  text_processing.rs
infumap/src/web/routes/: account.rs  admin.rs  command.rs  favicons.rs  files.rs  html.rs  ingest.rs  link_titles.rs  mod.rs
infumap/src/web/routes/command/: chat.rs  item_ops.rs  mod.rs  search.rs
infusdk/: Cargo.toml
infusdk/src/: lib.rs
infusdk/src/db/: kv_store.rs  mod.rs
infusdk/src/item/: flags.rs  mod.rs
infusdk/src/util/: geometry.rs  hash.rs  infu.rs  json.rs  mod.rs  time.rs  uid.rs
infusdk/src/web/: listener.rs  mod.rs  tokiort.rs
tools/: apple-photo.sh  show_note_icons.py  wg-monitor.sh  wg-peer-add.sh  wg-peer-qr.sh
tools/gpu/: README.md  model_aliases.json  python_runtime.sh  resolve_model_alias.py  run.sh
tools/gpu/gateway/: app.py  requirements.txt  run.sh
tools/gpu/image_extract/: README.md  app.py  backend_api.py  bootstrap_models.py  requirements.txt  run.sh
tools/gpu/image_tagging/: README.md  app.py  backend_api.py  requirements.txt  run.sh  update_manifests_qwen35.py
tools/gpu/image_tagging_mlx/: app.py  bootstrap_models.py  requirements.txt  run.sh
tools/gpu/pdf_extract/: README.md  app.py  requirements.txt  run.sh
tools/gpu/text_embed/: README.md  app.py  requirements.txt
tools/gpu/text_embedding/: README.md  app.py  requirements-fastembed.txt  (+2 more)
tools/image_tagging/: README.md  app.py  backend_api.py  backend_template.py  bootstrap_backend.py  bootstrap_models.py  run.sh
tools/pdf_to_md/: README.md  app.py  run.sh
tools/text_embedding/: README.md  app.py  run.sh
tools/text_extraction/: README.md  app.py  migrate_artifacts.py  run.sh
web/: README.md  add.html  build.sh  generate_dist_handlers.py  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: constants.ts  imageManager.ts  index.css  index.tsx  index_add.tsx  mouse.ts  server.ts  style.ts  upload.ts
(+413 files in other folders)
