[package]
name = "infumap"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.21.0"
bytes = "1"
clap = "3.0.10"
config = "0.13.1"
cookie = "0.17.0"
dirs = "4.0"
filetime = "0.2.20"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", default-features = false, features = ["http1", "server"] }
image = "0.24.5"
kamadak-exif = "0.5.5"
log = "0.4"
pretty_env_logger = "0.4.0"
once_cell = "1.17.0"
prometheus = "0.13.3"
rust-s3 = { version = "0.32.3", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
totp-rs = { version = "4.1.0", features = ["qr", "otpauth"] }
uuid = { version = "1.2.1", features = ["v4"] }
