[package]
name = "infumap"
version = "0.3.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
async-recursion = "1.1.1"
async-trait = "0.1.80"
base64 = "0.22.1"
brotli = "6.0.0"
byteorder = "1.5.0"
bytes = "1.6.0"
clap = "4.5.4"
config = "0.14.0"
cookie = "0.18.0"
dirs = "5.0.1"
filetime = "0.2.23"
futures-util = { version = "0.3.30" }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", default-features = false, features = ["http1", "server"] }
image = "0.25.2"
kamadak-exif = "0.5.5"
log = "0.4.21"
mime_guess = "2.0.4"
pretty_env_logger = "0.5.0"
once_cell = "1.19.0"
pin-project-lite = "0.2.11"
prometheus = "0.13.4"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.3.1"
rust-s3 = { version = "0.33.0", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["qr", "otpauth"] }
uuid = { version = "1.8.0", features = ["v4"] }

infusdk = { path = "../infusdk/" }
