[package]
name = "infumap"
version = "0.5.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
async-recursion = "1.1.1"
async-trait = "0.1.80"
base64 = "0.22.1"
brotli = "6.0.0"
byteorder = "1.5.0"
bytes = "1.6.0"
clap = "4.5.4"
config = "0.14.0"
cookie = "0.18.0"
dirs = "5.0.1"
filetime = "0.2.23"
futures-util = { version = "0.3.30" }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", default-features = false, features = ["http1", "server"] }
image = "0.25.2"
kamadak-exif = "0.5.5"
log = "0.4.21"
pretty_env_logger = "0.5.0"
once_cell = "1.19.0"
pin-project-lite = "0.2.11"
prometheus = "0.14.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots"] }
rpassword = "7.3.1"
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1"
totp-rs = { version = "5.5.1", features = ["qr", "otpauth"] }
uuid = { version = "1.8.0", features = ["v4"] }
zstd = "0.12"

infusdk = { path = "../infusdk/", version = "0.5.0" }
infer = "0.19.0"
mime = "0.3.17"
mime-sniffer = "0.1.3"

[patch.crates-io]
# rust-s3 0.37.1 calls danger_accept_invalid_hostnames which was removed in reqwest 0.12.
# Remove this patch once a fixed version of rust-s3 is published to crates.io.
rust-s3 = { git = "https://github.com/infumap/rust-s3", rev = "927d89791c4af5e9a66fdd087ffaf59287b35e5b" }
