[package]
name = "infusdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
bytes = "1"
futures-util = { version = "0.3" }
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0", default-features = false, features = ["http1", "server"] }
log = "0.4"
pin-project-lite = "0.2.4"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4"] }

# chrono = "0.4.34"
# csv = "1.3.0"
# dateparser = "0.2.1"
# dirs = "4.0"
# fast-math = "0.1.1"
# pretty_env_logger = "0.4.0"
