[package]
name = "infusdk"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
bytes = "1.6.0"
futures-util = { version = "0.3.30" }
http-body-util = "0.1.1"
hyper = { version = "1.3.1", default-features = false, features = ["http1", "server"] }
log = "0.4.21"
pin-project-lite = "0.2.11"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }

